# AI_Poem_Generator_Backend

./: .env.example  .gitignore  DEPLOYMENT.md  Dockerfile  README.md  pyproject.toml  render.yaml  requirements.txt  setup.py  start.sh
app/: main.py
app/models/: poem_models.py
app/services/: poem_service.py
tests/: test_api.py  test_comprehensive.py  test_connection.py  test_direct.py  test_import.py  test_simple.py  test_variety.py
